- Adaptation for Java 8 - Optimization